--- a/src/app/salary/salary-add-edit/salary-add-edit.component.html
+++ b/src/app/salary/salary-add-edit/salary-add-edit.component.html
@@ -89,7 +89,7 @@
                     (change)="checkValidity()"
                     [ngClass]="{'is-invalid': (clientForm.get('selectOption')!.touched || clientForm.get('selectOption')!.dirty) && !clientForm.get('selectOption')!.valid}" 
                     >
-                    <option *ngFor="let opt of formData.options"> {{opt}} </option>
+                    <option *ngFor="let opt of formData.options" [value]="opt"> {{opt}} </option>
                     </select>
                     <span class="invalid-feedback"> 
                         <span *ngIf="clientForm.get('selectOption')?.errors?.required"> Please enter the tax period </span>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <br/>
-            <div class="row mt-2" *ngIf="clientForm.get('selectOption')!.value.includes('Year')">
+            <div class="row mt-2" *ngIf="clientForm.get('selectOption')!.value == 'Enter for full Tax Year'">
                 <div class="col">
                     <p class="h6">SELECT YEAR</p>
                     <div class="col">
@@ -109,7 +109,7 @@
                         [ngClass]="{'is-invalid': (clientForm.get('selectYear')!.touched || clientForm.get('selectYear')!.dirty) && !clientForm.get('selectYear')!.valid}"
                         >
                         <option [value]=" "> </option>
-                        <option *ngFor="let x of formData.listYear"> Total for {{ x }} Tax Year </option>
+                        <option *ngFor="let y of formData.listYear" [value]="y"> Total for {{ y }} Tax Year </option>
                         </select>
                         <span class="invalid-feedback"> 
                             <span *ngIf="clientForm.get('selectYear')?.errors?.required"> Please enter the tax Year </span>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <br/>
-            <div class="row month" *ngIf="clientForm.get('selectOption')!.value.includes('Month')">
+            <div class="row month" *ngIf="clientForm.get('selectOption')!.value == 'Enter per Month'">
                 <div class="col">
                     <p class="h6">SELECT MONTH</p>
                     <div class="col">
@@ -130,7 +130,7 @@
                         [ngClass]="{'is-invalid': (clientForm.get('selectMonth')!.touched || clientForm.get('selectMonth')!.dirty) && !clientForm.get('selectMonth')!.valid}"
                         >
                         <option [value]=" "> </option>
-                        <option *ngFor="let x of formData.listMonth"> Total for {{ x }} </option>
+                        <option *ngFor="let m of formData.listMonth" [value]="m"> Total for {{ m }} </option>
                         </select>
                         <span class="invalid-feedback"> 
                             <span *ngIf="clientForm.get('selectMonth')?.errors?.required"> Please enter the tax Month </span>
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <br/>
-            <div class="row date" *ngIf="clientForm.get('selectOption')!.value.includes('Date')">
+            <div class="row date" *ngIf="clientForm.get('selectOption')!.value == 'Enter per Specific Date'">
                 <div class="col">
                     <p class="h6">SELECT DATE </p>
                     <div class="row">
@@ -153,7 +153,7 @@
                             [ngClass]="{'is-invalid': (clientForm.get('year')!.touched || clientForm.get('year')!.dirty) && !clientForm.get('year')!.valid}"
                             >
                             <option [value]=" "> </option>
-                            <option *ngFor="let x of formData.years"> 20{{ x }} </option>
+                            <option *ngFor="let x of formData.years" [value]="x"> 20{{ x }} </option>
                             </select>
                             <span class="invalid-feedback"> 
                                 <span *ngIf="clientForm.get('year')?.errors?.required"> Please enter the year </span>
@@ -168,7 +168,7 @@
                             [ngClass]="{'is-invalid': (clientForm.get('month')!.touched || clientForm.get('month')!.dirty) && !clientForm.get('month')!.valid}"
                             >
                             <option [value]=" "> </option>
-                            <option *ngFor="let x of formData.months"> {{ x }} </option>
+                            <option *ngFor="let x of formData.months" [value]="x"> {{ x }} </option>
                             </select>
                             <span class="invalid-feedback"> 
                                 <span *ngIf="clientForm.get('month')?.errors?.required"> Please enter the month </span>
@@ -183,7 +183,7 @@
                             [ngClass]="{'is-invalid': (clientForm.get('day')!.touched || clientForm.get('day')!.dirty) && !clientForm.get('day')!.valid}"
                             >
                             <option [value]=" "> </option>
-                            <option *ngFor="let x of numberOfDays"> {{ x }} </option>
+                            <option *ngFor="let x of numberOfDays" [value]="x"> {{ x }} </option>
                             </select>
                             <span class="invalid-feedback"> 
                                 <span *ngIf="clientForm.get('day')?.errors?.required"> Please enter the day </span>
@@ -194,7 +194,7 @@
                 </div>
             </div>
             <br/>
-            <button class="btn btn-primary" type="submit" [disabled]="clientForm.invalid"> {{ btnLabel }} </button>
+            <button class="btn btn-primary" type="submit"> {{ btnLabel }} </button>
             </form>
         </div>
     </div>
