--- a/src/app/salary/salary-add-edit/salary-add-edit.component.html
+++ b/src/app/salary/salary-add-edit/salary-add-edit.component.html
@@ -1,4 +1,17 @@
-<div class="container w-50 mt-5">
+<div class="container" [style.width.cm]="'5'" *ngIf="isLoading">
+    <app-loader></app-loader>
+</div>
+
+<div class="container w-50 mt-5" *ngIf="!isLoading">
+    <div class="row">
+        <div *ngIf="alertMessage">
+            <div class="alert alert-primary alert-dismissible fade show"  role="alert" style="text-align: end; color: red;">
+                {{ alertMessage }}
+                <button type="button" class="btn-close mt-2" data-bs-dismiss="alert" aria-label="Close"></button>
+                <button class="btn btn-primary" style="margin-left: 1cm;" [routerLink]="['/salary-list']"> View </button>
+            </div>
+        </div>
+    </div>
     <div class="card">
         <div class="card-header">
             {{ formLabel }}
